[tool.poetry]
name = "source"
version = "0.1.0"
description = ""
authors = ["Emma Cooke <ecooke@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.1.1"
sphinx-rtd-theme = "^1.0.0"
myst-parser = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
